# utilities

./: .gitignore  delete_pattern.py  pyproject.toml
comparefolders/: dir_compare.py
docs/: API.md  CHEATSHEET.md  README.md
filepack/: API.md  CHEATSHEET.md  filepack.py  pyproject.toml  test_filepack.py
filtered_tree/: filtered_tree.py
manifest_manager/: manifest_check.py  verify_install.py
mdtools/: reformat_math.py
packtools/: __init__.py  _hashing.py  delete_pattern.py  dir_compare.py  filepack.py  filtered_tree.py  generate_manifest.py  manifest_check.py
signature_compare/: __init__.py  compare.py
tests/: test_packtools.py
