[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-deleter"
version = "0.1.0"
description = "A CLI utility to recursively delete files matching a specific pattern."
authors = [
    { name = "Ken" }
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.2"
]

[project.scripts]
# This exposes the tool to your terminal. 
# Format: "command-name = module_name:function_name"
delete-pattern = "delete_pattern:main"