[project]
name = "filepack"
version = "0.1.1"
dependencies = [
    "loguru",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
filepack = "filepack:_main"
flpk = "filepack:_main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- THE FIX ---
[tool.setuptools]
py-modules = ["filepack"]